--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+    2.0 Job Ready AI Powered Cohort: Web + DSA + Aptitude
+  </title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
@@ -37,6 +39,37 @@
         <h4><i class="ri-menu-3-fill"></i></h4>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <section class="section1">
+        <div class="left">
+          <h1>2.0 Job Ready AI Powered Cohort: Complete Web Development + DSA + Gen-AI + Aptitude </h1>
+          <div class="tags">
+            <h4>MERN Stack</h4>
+            <h4>DSA with JS</h4>
+            <h4>AI Powered</h4>
+            <h4>Placement Focused</h4>
+            <h4>Aptitude & Reasoning</h4>
+          </div>
+          <h3>Price <span>₹ 5999</span> <span>₹ 11999</span>(+GST)</h3>
+          <h5>Scratch Card in the End!</h5>
+          <div class="buttons">
+            <button class="btn1">Buy Now</button>
+            <button class="btn2">View Syllabus</button>
+          </div>
+<h6>Batch Starts on <span>15th September</span></h6>
+        </div>
+        <div class="right">
+          <div class="image">
+            <img src="./section1 img.webp" alt="">
+          </div>
+          <div class="text">
+            <h4>Langu</h4>
+            <h4></h4>
+            <h4></h4>
+            <h4></h4>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
