--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h4>Placement Focused</h4>
             <h4>Aptitude & Reasoning</h4>
           </div>
-          <h3>Price <span>₹ 5999</span> <span>₹ 11999</span>(+GST)</h3>
+          <h3>Price <span class="green">₹ 5999</span> <span class="grey">₹ 11999</span><span class="gst">(+ GST)</span></h3>
           <h5>Scratch Card in the End!</h5>
           <div class="buttons">
             <button class="btn1">Buy Now</button>
@@ -63,10 +63,10 @@
             <img src="./section1 img.webp" alt="">
           </div>
           <div class="text">
-            <h4>Langu</h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h4>Language:<span>Hinglish</span></h4>
+            <h4>Certificate:<span>YES</span></h4>
+            <h4>Schedule:<span class="green">Mon - Sat</span> <span class="white"> (8:30PM)</span></h4>
+            <h4>Total Content:<span>250+ Hours</span></h4>
           </div>
         </div>
       </section>
